# tock

./: .gitignore  Cargo.toml  drivers.rs  rust-toolchain.toml  shell.nix
arch/cortex-m/src/: lib.rs  nvic.rs  syscall.rs
arch/cortex-m33/: Cargo.toml
arch/cortex-m33/src/: lib.rs
arch/rv32i/src/: support.rs  syscall.rs
boards/: README.md  kernel_layout.ld  release-tests.sh
boards/build_scripts/: tock_kernel_layout.ld
boards/components/src/: console.rs  debug_writer.rs  lib.rs  lsm6dsox.rs  temperature_rp2040.rs
boards/esp32-c3-devkitM-1/: Cargo.toml  esp32c3.rom.ld  layout.ld
boards/esp32-c3-devkitM-1/src/: main.rs
boards/imxrt1050-evkb/src/: main.rs
boards/lpc55s69-evk/: Cargo.toml  Makefile  blinky  button  chip_layout.ld  layout.ld  lpcxpresso55s69_hello_world_cm33_core0.axf
boards/lpc55s69-evk/src/: io.rs  main.rs
boards/lpcxpresso55s69/: Cargo.toml  Makefile  layout.ld  opeocd.cfg
boards/lpcxpresso55s69/src/: io.rs  main.rs
boards/microbit_v2/: Makefile
boards/microbit_v2/src/: led.rs  led_bar.rs  main.rs
boards/nano33ble/src/: main.rs
boards/nano_rp2040_connect/: Makefile
boards/nano_rp2040_connect/src/: main.rs
boards/nucleo_f429zi/: Makefile
boards/nucleo_f429zi/src/: main.rs
boards/pico_explorer_base/: Makefile
boards/qemu_i486_q35/: Cargo.toml  Makefile  qemu-run.sh
boards/qemu_i486_q35/.cargo/: config.toml
boards/qemu_i486_q35/src/: main.rs
boards/raspberry_pi_pico/: Makefile
boards/raspberry_pi_pico/src/: main.rs
boards/stm32f412gdiscovery/: Makefile
boards/stm32f412gdiscovery/src/: main.rs
capsules/: Cargo.toml
capsules/core/: README.md
capsules/core/src/: driver.rs  lib.rs  text_screen_uart.rs
capsules/extra/: README.md
capsules/extra/src/: lib.rs  nina_w102.rs
capsules/src/: bpf_exec.rs  button.rs  console.rs  digits.rs  driver.rs  led_matrix.rs  led_rgb.rs  lib.rs  lsm6ds.rs  lsm6dsox.rs  lsm6dsoxtr.rs  nina_w102.rs  packed.rs  timer.rs  virtual_uart.rs  ws2812b.rs
capsules/src/asynchronous/: sleep.rs
capsules/src/bpf/: ebpf.rs  insn_builder.rs  lib.rs  mod.rs  rbpf.rs  verifier.rs
capsules/src/rbpf/: rbpf.rs  verifier.rs
capsules/src/usb/: cdc.rs  descriptors.rs  usbc_client_ctrl.rs
chips/esp32-c3/: build.rs
chips/esp32-c3/src/: chip.rs  intc.rs  led_pwm.rs  lib.rs  (+4 more)
chips/lpc55s69/: Cargo.toml  README.md
chips/lpc55s6x/: Cargo.toml  README.md
chips/lpc55s6x/src/: chip.rs  clocks.rs  ctimer0.rs  flexcomm.rs  gpio.rs  gpiopin.rs  inputmux.rs  interrupts.rs  iocon.rs  lib.rs  nvic.rs  pint.rs  rtc.rs  syscon.rs  uart.rs
chips/rp2040/: README.md
chips/x86_q35/: Cargo.toml
chips/x86_q35/src/: chip.rs  dv_kb.rs  dv_ms.rs  interrupts.rs  kb_poll.rs  keyboard.rs  keyboard_console.rs  lib.rs  mmu.rs  pic.rs  pit.rs  ps2.rs  ps2_cmd.rs  ps2_ctl.rs  serial.rs  vga.rs  vga_textscreen.rs  vga_uart_driver.rs
doc/reference/: trd-mp.md
kernel/: Cargo.toml
kernel/src/: config.rs  executor.rs  lib.rs  mp.rs
libraries/byteorder/: Cargo.toml  README.md
libraries/byteorder/src/: lib.rs
(+24 files in other folders)
