[package]
name = "lpcxpresso55s69"
version.workspace = true
authors.workspace = true
build = "build.rs"
edition.workspace = true

[dependencies]
components = { path = "../components" }
cortexm33 = { path = "../../arch/cortex-m33" }
kernel = { path = "../../kernel" }

lpc55s69 = { path = "../../chips/lpc55s69" }

capsules-core = { path = "../../capsules/core" }
capsules-extra = { path = "../../capsules/extra" }
cortex-m-semihosting = "0.5.0"
