# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2024.

[package]
name = "x86_q35"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../../kernel" }
x86 = { path = "../../arch/x86" }
tock-registers = { path = "../../libraries/tock-register-interface" }
tock-cells = { path = "../../libraries/tock-cells" }

[lints]
workspace = true

[features]
vga_text_80x25  = []
vga_640x480_16  = []
vga_800x600_16  = []

